Update materialfox and personal css edits

--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/tabbar/tabbar.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/tabbar/tabbar.css
@@ -76,7 +76,8 @@
 	}
 }
 
-#tabbrowser-tabs .arrowscrollbox-scrollbox
+#tabbrowser-tabs .arrowscrollbox-scrollbox, /* <71 */
+#tabbrowser-tabs scrollbox[part=scrollbox] /* 71+ */
 {
 	padding-inline-start: 8px !important;
 	padding-inline-end: 8px !important;
@@ -441,12 +442,13 @@
 	} 
 }
 
-#tabbrowser-tabs .tabs-newtab-button
+#tabbrowser-tabs #tabs-newtab-button
 {
 	margin-inline-start: 6px !important;
 }
 
-#tabbrowser-tabs[overflow] .arrowscrollbox-scrollbox
+#tabbrowser-tabs[overflow] .arrowscrollbox-scrollbox, /* <71 */
+#tabbrowser-tabs[overflow] scrollbox[part=scrollbox] /* 71+ */
 {
 	border-radius: 8px 8px 0 0 !important;
 	background-color: rgba(0, 0, 0, .2) !important;
