--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/userChrome.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/userChrome.css
@@ -5,7 +5,7 @@
 @import "navbar/navbar.css";
 @import "personalbar/personalbar.css";
 @import "popup/popup.css";
-@import "popup/urlbar-results.css";
+@import "urlbar/urlbar.css";
 
 @import "manual/findbar.css";
 @import "manual/manual.css";
