--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/popup/popup.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/popup/popup.css
@@ -86,7 +86,8 @@ menupopup menu[disabled=true],
 }
 
 /* force regular scrollbar for menus */
-menupopup .arrowscrollbox-scrollbox
+menupopup .arrowscrollbox-scrollbox, /* <71 */
+menupopup scrollbox[part=scrollbox] /* 71+ */
 {
 	overflow-y: auto !important;
 }
@@ -190,8 +191,8 @@ panel:not(#urlbar-results):not(#PopupAutoCompleteRichResult)
 {
 	-moz-window-shadow: none !important;
 
-	margin: 0px -34px -18px !important;	
-	padding: 0px 14px 18px !important;
+	margin: -19px -14px -18px !important;	
+	padding: 11px 14px 18px !important;
 }
 
 panel[type="arrow"][side="top"],
@@ -208,22 +209,20 @@ panel[type="arrow"][side="right"]
 	margin-bottom: -44px;
 }
 
-panel:not(.tooltip-xul-wrapper) .panel-arrowcontent,
-.panel-arrowcontent
+panel:not(.tooltip-xul-wrapper) .panel-arrowcontent
 {
 	background: var(--arrowpanel-background) !important;
 	border: 0 !important;
 	border-radius: 4px !important;
 	box-shadow:
 		0 5px 5px -3px rgba(0, 0, 0, .2),
-		0 8px 5px 1px rgba(0, 0, 0, .14),
-		0 3px 5px 2px rgba(0, 0, 0, .12) !important;
+		0 8px 10px 1px rgba(0, 0, 0, .14),
+		0 3px 14px 2px rgba(0, 0, 0, .12) !important;
 	color: var(--arrowpanel-color) !important;
 }
 
 panel:not(.tooltip-xul-wrapper) .panel-arrowbox,
-.cui-widget-panel .panel-arrowbox,
-.panel-arrowbox
+.cui-widget-panel .panel-arrowbox
 {
 	display: none !important;
 }
