--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/urlbar/urlbar.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/urlbar/urlbar.css
@@ -173,6 +173,12 @@
 	z-index: 99999 !important;
 }
 
+/* 71+ */
+#urlbar-background
+{
+	display: none !important;
+}
+
 #urlbar-input-container
 {
 	width: 100% !important;
@@ -255,6 +261,7 @@
 #identity-box,
 #urlbar-display-box
 {
+	display: flex !important;
 	position: relative !important;
 }
 
@@ -281,7 +288,7 @@
 
 #urlbar[pageproxystate=valid]:not([open]) #identity-box:-moz-any(.notSecureText, .verifiedIdentity, .chromeUI, .extensionPage, .certUserOverridden) #identity-icon-labels
 {
-	display: -moz-box !important;
+	display: flex !important;
 }
 
 
