--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/icons/icons.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/icons/icons.css
@@ -185,6 +185,7 @@
 }
 
 #urlbar[pageproxystate="invalid"] #identity-icon,
+.searchbar-search-icon,
 #PopupAutoCompleteRichResult .ac-type-icon[type="keyword"],
 #PopupAutoCompleteRichResult .ac-site-icon[type="searchengine"],
 #appMenu-find-button,
