--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/urlbar/urlbar.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/urlbar/urlbar.css
@@ -234,7 +234,8 @@
 #searchbar-container
 {
 	overflow: visible !important;
-	padding: 0 6px !important;
+	padding: 0 !important;
+	margin-inline: 6px !important;
 }
 
 .searchbar-textbox
@@ -328,7 +329,7 @@
 	display: -moz-box !important;
 }
 
-#urlbar[pageproxystate=valid] #identity-box:-moz-any(.certUserOverridden, .unknownIdentity)
+#urlbar[pageproxystate=valid] #identity-box:-moz-any(.weakCipher, .certUserOverridden, .certErrorPage, .insecureLoginForms, .mixedActiveContent)
 {
 	color: #c94031 !important;
 }
@@ -379,9 +380,10 @@
 }
 
 .urlbar-icon,
+#page-action-buttons > toolbarbutton,
 .searchbar-search-button,
 #identity-box,
-#tracking-protection-icon-container
+#tracking-protection-icon-box
 {
 	min-width: 32px !important;
 	height: 24px !important;
@@ -395,10 +397,55 @@
 	background-color: transparent !important;
 }
 
+#tracking-protection-icon-container
+{
+	background: 0 !important;
+	border: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	width: auto !important;
+	order: 97 !important;
+}
+
 #tracking-protection-icon-box
 {
-	position: relative !important;
 	display: block !important;
+	width: 32px !important;
+}
+
+#tracking-protection-icon-box
+{
+	transition:
+		background-color .2s var(--ease-basic),
+		width .15s var(--ease-in),
+		opacity .15s var(--ease-basic),
+		visibility 0s .2s !important;
+	opacity: 0 !important;
+	visibility: hidden !important;
+	width: 0 !important;
+}
+
+#urlbar:hover #tracking-protection-icon-box,
+#tracking-protection-icon-container[open] #tracking-protection-icon-box,
+#tracking-protection-icon-box[active]
+{
+	transition:
+		background-color .2s var(--ease-basic),
+		width .3s var(--ease-out),
+		opacity .3s var(--ease-basic) !important;
+	opacity: 1 !important;
+	visibility: visible !important;
+	width: 32px !important;
+}
+
+#tracking-protection-icon
+{
+	display: block !important;
+}
+
+#tracking-protection-icon-animatable-box
+{
+	display: none !important;
 }
 
 #identity-box #notification-popup-box
@@ -410,6 +457,8 @@
 #page-action-buttons
 {
 	height: 24px !important;
+	display: flex !important;
+	order: 99 !important;
 }
 
 #urlbar[open] #page-action-buttons
@@ -418,19 +467,21 @@
 }
 
 .urlbar-icon:hover:not([disabled]),
+#page-action-buttons > toolbarbutton:hover:not([disabled]),
 .searchbar-search-button:hover,
 #identity-box:hover:not(.no-hover),
-#tracking-protection-icon-container:hover
+#tracking-protection-icon-container:hover #tracking-protection-icon-box
 {
 	background-color: var(--toolbarbutton-hover-background) !important;
 }
 
 .urlbar-icon:hover:active:not([disabled]),
 .urlbar-icon[open],
+#page-action-buttons > toolbarbutton:hover:active:not([disabled]),
 .searchbar-search-button:hover:active,
 #identity-box:hover:active:not(.no-hover),
 #identity-box[open]:not(.no-hover),
-#tracking-protection-icon-container[open]
+#tracking-protection-icon-container[open] #tracking-protection-icon-box
 {
 	background-color: var(--toolbarbutton-active-background) !important;
 	transition-duration: 0 !important;
@@ -438,17 +489,17 @@
 
 #star-button-box
 {
-	-moz-box-ordinal-group: 99 !important;
+	order: 99 !important;
 }
 
 #pageActionButton
 {
-	-moz-box-ordinal-group: 98 !important;
+	order: 98 !important;
 }
 
 #contextual-feature-recommendation
 {
-	-moz-box-ordinal-group: 97 !important;
+	order: 96 !important;
 	width: auto !important;
 }
 
@@ -522,6 +573,52 @@
 	display: none !important;
 }
 
+#userContext-icons
+{
+	flex-direction: row !important;
+	align-items: center !important;
+	justify-content: center !important;
+	position: relative !important;
+	padding-inline: 8px !important;
+	margin: 0 !important;
+	color: var(--identity-tab-color) !important;
+}
+
+#userContext-icons:not([hidden])
+{
+	display: flex !important;
+}
+
+#userContext-icons > *
+{
+	z-index: 1 !important;
+	color: inherit !important;
+	fill: currentColor !important;
+}
+
+#userContext-label
+{
+	margin: 0 !important;
+}
+
+#userContext-label + #userContext-indicator
+{
+	margin-inline-start: 6px !important;
+}
+
+#userContext-icons::before
+{
+	content: '' !important;
+	position: absolute !important;
+	left: 0 !important;
+	right: 0 !important;
+	top: 0 !important;
+	bottom: 0 !important;
+	background: var(--identity-tab-color) !important;
+	border-radius: 99px !important;
+	opacity: .1 !important;
+}
+
 #cfr-label-container
 {
 	background: 0 !important;
@@ -565,7 +662,32 @@
 	padding: 0 !important;
 }
 
-/* icons 1x */
+/* lock (secure) */
+#identity-box[pageproxystate="valid"]:-moz-any(.verifiedDomain, .verifiedIdentity, .mixedActiveBlocked) > #identity-icon
+{
+	list-style-image: var(--lock-icon) !important;
+}
+
+/* info (not secure) */
+#identity-box[pageproxystate="valid"]:-moz-any(.mixedDisplayContent, .mixedDisplayContentLoadedActiveBlocked, .unknownIdentity) > #identity-icon
+{
+    list-style-image: var(--info-icon) !important;
+}
+
+/* warning (dangerous) */
+#identity-box[pageproxystate="valid"]:-moz-any(.notSecure, .weakCipher, .certUserOverridden, .certErrorPage, .insecureLoginForms, .mixedActiveContent) > #identity-icon
+{
+    list-style-image: var(--warning-icon) !important;
+}
+
+#urlbar-input,
+#searchbar-input,
+.searchbar-textbox /* < 71 */
+{
+	transform: translateY(var(--input-offset)) !important;
+}
+
+/* 1x */
 #urlbar
 {
 	--info-icon: url(info-1x.svg);
@@ -573,7 +695,13 @@
 	--warning-icon: url(connection-warning-1x.svg);
 }
 
-/* icons 2x */
+#urlbar,
+#searchbar
+{
+	--input-offset: -1px;
+}
+
+/* 2x */
 @media (min--moz-device-pixel-ratio: 2)
 {
 	#urlbar
@@ -582,46 +710,15 @@
 		--lock-icon: url(connection-2x.svg);
 		--warning-icon: url(connection-warning-2x.svg);
 	}
-}
-
-/* info (not secure) */
-#identity-box[pageproxystate="valid"]:-moz-any(.notSecure, .insecureLoginForms, .mixedActiveContent) > #identity-icon
-{
-    list-style-image: var(--info-icon) !important;
-}
-
-#identity-box[pageproxystate="valid"]:-moz-any(
-	.certUserOverridden,
-	.weakCipher,
-	.unknownIdentity) > #identity-icon
-{
-    list-style-image: var(--warning-icon) !important;
-}
-
-/* lock (secure) */
-#identity-box[pageproxystate="valid"]:-moz-any(.verifiedDomain, .verifiedIdentity, .mixedActiveBlocked) > #identity-icon
-{
-	list-style-image: var(--lock-icon) !important;
-}
-
-/* high DPI adjustments */
-@media (min--moz-device-pixel-ratio: 2)
-{
+	
+	#urlbar,
+	#searchbar
+	{
+		--input-offset: -.5px;
+	}
+	
 	#identity-icon-labels
 	{
 		padding-inline-end: .5px !important;
-	}
-	
-	#urlbar[pageproxystate=valid] > #identity-box:-moz-any(.unknownIdentity, .notSecure) > #identity-icon
-	{
-		transform: translate(.5px, .5px) !important;
-	}
-	
-	#urlbar-input,
-	#searchbar-input,
-	/* < 71 */
-	.searchbar-textbox
-	{
-		transform: translateY(-.5px) !important;
 	}
 }
