Update findbar and css files

--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/manual/findbar.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/manual/findbar.css
@@ -122,3 +122,7 @@ window[lwtheme="true"] findbar .findbar-button[checked="true"] {
 window[lwtheme="true"] findbar .findbar-find-status, window[lwtheme="true"] findbar .found-matches {
 	color: var(--lwt-text-color) !important;
 }
+
+findbar .findbar-find-status {
+  display: none !important;
+}
