--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/userChrome.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/userChrome.css
@@ -12,3 +12,7 @@
 @import "manual/roomy.css";
 @import "manual/simpleMenuWizard.css";
 
+
+/* Do not edit this section of this file (outside the Browser Toolbox). It is managed by the reStyle extension. */ /*START:113eab28-861b-4254-bfa1-f58d6d376f0c*/
+
+/*END:113eab28-861b-4254-bfa1-f58d6d376f0c*/
