--- a/.mozilla/firefox/m6ar4kzt.default-beta-back-ovfs/chrome/global/global.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta-back-ovfs/chrome/global/global.css
@@ -53,8 +53,8 @@
 
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"],
-.scrollbutton-down[part="scrollbutton-down"]
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton),
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton)
 {
 	border-radius: 99px !important;
 	transition-property:
@@ -81,8 +81,8 @@
 
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"],
-.scrollbutton-down[part="scrollbutton-down"]
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton),
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton)
 {
 	font-size: 12px !important;
 	padding: 0 !important;
@@ -93,8 +93,8 @@
 
 #navigator-toolbox :-moz-any(.toolbarbutton-1, .scrollbutton-up, .scrollbutton-down),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"],
-.scrollbutton-down[part="scrollbutton-down"]
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton),
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton)
 {
 	max-height: 32px !important;
 	height: 32px !important;
@@ -103,8 +103,8 @@
 
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down)[disabled],
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"][disabled],
-.scrollbutton-down[part="scrollbutton-down"][disabled]
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton)[disabled],
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton)[disabled]
 {
 	opacity: .42 !important;
 }
@@ -112,16 +112,16 @@
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down):hover:not([disabled]),
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down):-moz-any(:hover:active, [checked], [open]):not([disabled]),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"]:hover:not([disabled]),
-.scrollbutton-down[part="scrollbutton-down"]:hover:not([disabled])
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton):hover:not([disabled]),
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton):hover:not([disabled])
 {
 	background-color: var(--toolbarbutton-hover-background) !important;
 }
 
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down):-moz-any(:hover:active, [checked], [open]):not([disabled]),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"]:hover:active:not([disabled]),
-.scrollbutton-down[part="scrollbutton-down"]:hover:active:not([disabled])
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton):hover:active:not([disabled]),
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton):hover:active:not([disabled])
 {
 	fill-opacity: .04 !important;
 	background-size: 100% !important;
@@ -129,8 +129,8 @@
 
 #navigator-toolbox :-moz-any(.toolbarbutton-icon, .toolbarbutton-badge-stack),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"] > .toolbarbutton-icon,
-.scrollbutton-down[part="scrollbutton-down"] > .toolbarbutton-icon
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton) > .toolbarbutton-icon,
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton) > .toolbarbutton-icon
 {
 	fill-opacity: 1 !important;
 	border: 0 !important;
@@ -146,8 +146,8 @@
 #navigator-toolbox > #PersonalToolbar .toolbarbutton-1 > .toolbarbutton-icon,
 #navigator-toolbox :-moz-any(.toolbarbutton-1, .scrollbutton-up, .scrollbutton-down) > :-moz-any(.toolbarbutton-icon, .toolbarbutton-badge-stack),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"] > .toolbarbutton-icon,
-.scrollbutton-down[part="scrollbutton-down"] > .toolbarbutton-icon
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton) > .toolbarbutton-icon,
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton) > .toolbarbutton-icon
 {
 	padding: 6px !important;
 	background: 0 !important;
