--- a/.mozilla/firefox/m6ar4kzt.default-beta-back-ovfs/chrome/popup/popup.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta-back-ovfs/chrome/popup/popup.css
@@ -102,8 +102,8 @@ menupopup menuitem,
 menupopup menu,
 .autocomplete-richlistitem
 {
-	/*height: 32px !important;*/
-        padding: 4px 16px !important;
+	height: 32px !important;
+	padding: 0 16px !important;
 	border: 0 !important;
 	background: 0 !important;
 	color: inherit !important;
@@ -132,16 +132,15 @@ menupopup menu[disabled=true],
 	opacity: .5 !important;
 }
 
-/* force regular scrollbar for menus */
-menupopup .arrowscrollbox-scrollbox, /* <71 */
-menupopup scrollbox[part=scrollbox] /* 71+ */
+/* disable vertical menu scroll buttons and use a good ol' scrollbar */
+/* this is a shotgun approach, expect side effects */
+scrollbox[orient=vertical] /* >=71 */
 {
 	overflow-y: auto !important;
 }
 
 /* why still use scroll buttons; is this the middle ages? */
-menupopup .scrollbutton-up,
-menupopup .scrollbutton-down
+.menupopup-scrollbutton
 {
 	display: none !important;
 }
