--- a/.mozilla/firefox/m6ar4kzt.default-beta-back-ovfs/chrome/tabbar/tabbar.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta-back-ovfs/chrome/tabbar/tabbar.css
@@ -82,8 +82,8 @@
 #TabsToolbar .tabbrowser-arrowscrollbox::part(scrollbutton-up),
 #TabsToolbar .tabbrowser-arrowscrollbox::part(scrollbutton-down),
 /* no ::part workaround - may have side effects */
-.scrollbutton-up[part="scrollbutton-up"],
-.scrollbutton-down[part="scrollbutton-down"]
+.scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton),
+.scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton)
 {
 	margin-top: calc((var(--tab-min-height) - var(--button-size)) / 2) !important;
 	margin-bottom: calc((var(--tab-min-height) - var(--button-size)) / 2) !important;
@@ -475,6 +475,11 @@
 	border-radius: 8px 8px 0 0 !important;
 	background-color: rgba(0, 0, 0, .1) !important;
 	padding-inline-start: 0 !important;
+}
+
+#tabbrowser-tabs[overflow]
+{
+	margin-inline-start: 8px !important;
 }
 
 #tabbrowser-tabs[overflow] .tabbrowser-tab[first-visible-tab]:not([pinned]),
