Refresh dotfiles: Rename/rm files, new zsh plugins, fix tmp in presentview, update MaterialFox, add konsole profile, update Micro settings/bindings

--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/global/global.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/global/global.css
@@ -290,6 +290,12 @@
 	transition-duration: .1s !important;
 }
 
+/* note: use Firefox account button instead */
+#TabsToolbar .private-browsing-indicator
+{
+	display: none !important;
+}
+
 /* high DPI adjustments */
 @media (min--moz-device-pixel-ratio: 2)
 {
