--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/popup/popup.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/popup/popup.css
@@ -39,24 +39,48 @@ panel[type="autocomplete-richlistbox"],
 	border: 0 !important;
 }
 
+.popup-internal-box,
+panel[type="autocomplete-richlistbox"] > .autocomplete-richlistbox,
+#PopupSearchAutoComplete > *,
+.menupopup-arrowscrollbox
+{
+	background: var(--arrowpanel-background) !important;
+}
+
 /* themes a menupopup (or other root level / shadow dom popup) as a panel */
 /* Mozilla's use of shadow dom means we can't use a menupopup > .popup-internal-box */
 .popup-internal-box,
-panel[type="autocomplete-richlistbox"] > .autocomplete-richlistbox
+panel[type="autocomplete-richlistbox"] > .autocomplete-richlistbox,
+.menupopup-arrowscrollbox
 {
 	margin: 0 !important;
 	padding: 8px 0 !important;
-	background: var(--arrowpanel-background) !important;
 	border-radius: 4px !important;
 	color: inherit !important;
 }
 
-.popup-internal-box
+.popup-internal-box,
+.menupopup-arrowscrollbox
 {
 	box-shadow:
 		0 5px 5px -3px rgba(0,0,0,.2),
 		0 8px 10px 1px rgba(0,0,0,.14),
 		0 3px 14px 2px rgba(0,0,0,.12) !important;
+}
+
+#PopupSearchAutoComplete > *
+{
+	border-radius: 0 !important;
+}
+
+#PopupSearchAutoComplete > :first-child
+{
+	border-radius: 4px 4px 0 0 !important;
+}
+
+#PopupSearchAutoComplete > :last-child
+{
+	border-radius: 0 0 4px 4px !important;
 }
 
 /* autocomplete panel can't overlap the textbox, so shadow can't go up
@@ -65,9 +89,22 @@ panel[type="autocomplete-richlistbox"] > .autocomplete-richlistbox
 {
 	box-shadow:
 		0 0 0 1px rgba(0, 0, 0, .03),
-		0 5px 5px -3px rgba(0,0,0,.2),
-		0 8px 10px -0px rgba(0,0,0,.14),
-		0 3px 14px -5px rgba(0,0,0,.12) !important;
+		0 5px 5px -3px rgba(0, 0, 0, .2),
+		0 8px 10px -0px rgba(0, 0, 0, .14),
+		0 3px 14px -5px rgba(0, 0, 0, .12) !important;
+}
+
+/* search panel gets special treatment; it has multiple children */
+#PopupSearchAutoComplete > .autocomplete-richlistbox
+{
+	box-shadow: none !important;
+}
+
+#PopupSearchAutoComplete
+{
+	filter:
+		drop-shadow(0 8px 6px rgba(0, 0, 0, .25))
+		drop-shadow(0 1px 1px rgba(0, 0, 0, .125)) !important;
 }
 
 /* reset non-layout props when embedded in a panel
@@ -954,6 +991,18 @@ richlistitem:-moz-any(
 	[originaltype="loginsFooter"]) .ac-title
 {
 	margin: 0 !important;
+}
+
+#confirmation-hint-message-container,
+#confirmation-hint-checkmark-animation-container
+{
+	margin-block: 8px !important;
+	margin-inline: 8px !important;
+}
+
+#confirmation-hint-checkmark-animation-container
+{
+	margin-inline-end: 0 !important;
 }
 
 /* high DPI adjustments */
