--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/urlbar/urlbar.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/urlbar/urlbar.css
@@ -88,6 +88,7 @@
 	max-width: 100% !important;
 	font-size: revert !important;
 	color: var(--urlbar-popup-url-color) !important;
+	padding: 0 !important;
 }
 
 .urlbarView-url:not(:empty)
@@ -116,21 +117,20 @@
 	margin-block-end: 0 !important;
 }
 
-.search-one-offs
+.urlbarView .search-one-offs
 {
 	padding: 4px !important;
 	display: flex !important;
-	flex-direction: row !important;
 }
 
-.search-panel-one-offs-header
+.urlbarView .search-panel-one-offs-header
 {
 	margin-inline-start: 12px !important;
 	line-height: 40px !important;
 	transform: translateY(-1px) !important;
 }
 
-.search-panel-one-offs
+.urlbarView .search-panel-one-offs
 {
 	border-radius: 0 0 8px 8px !important;
 	display: inline-flex !important;
@@ -138,9 +138,11 @@
 	padding: 0 !important;
 	margin: 0 !important;
 	float: left !important;
+	max-width: none !important;
+	height: auto !important;
 }
 
-.searchbar-engine-one-off-item
+.urlbarView .searchbar-engine-one-off-item
 {
 	height: 32px !important;
 	border-radius: 16px !important;
@@ -558,7 +560,7 @@
 		background-color .2s var(--ease-basic),
 		margin .15s var(--ease-in),
 		opacity .15s var(--ease-basic),
-		visibility 0s .2s !important;
+		visibility 0s 4s !important;
 	opacity: 0 !important;
 	visibility: hidden !important;
 	margin-inline-start: -32px !important;
@@ -744,6 +746,7 @@
 .searchbar-textbox /* < 71 */
 {
 	transform: translateY(var(--input-offset)) !important;
+	line-height: 1.745em !important;
 }
 
 /* 1x */
