--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/userChrome.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/userChrome.css
@@ -6,8 +6,9 @@
 @import "personalbar/personalbar.css";
 @import "popup/popup.css";
 @import "urlbar/urlbar.css";
+@import "findbar/findbar.css";
 
-@import "manual/findbar.css";
+//@import "manual/findbar.css";
 @import "manual/manual.css";
 @import "manual/roomy.css";
 @import "manual/simpleMenuWizard.css";
