--- a/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/navbar/navbar.css
+++ b/.mozilla/firefox/sa2yeb0m.default-beta-back-ovfs/chrome/navbar/navbar.css
@@ -2,8 +2,8 @@
 {
 	min-height: 36px !important;
 	box-shadow: none !important;
-	padding-left: 6px !important;
-	padding-right: 6px !important;
+	padding-inline: 5px 6px !important;
+	background-color: var(--toolbar-bgcolor) !important;
 }
 
 #reload-button[disabled]:not(:-moz-window-inactive) > .toolbarbutton-icon
